// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delegation operation Build operation (Desugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 70))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 73) ((set_type (params (\\"operation.test.ts\\" 73)) \\"unit\\" (\\"operation.test.ts\\" 84)) (set (operations (\\"operation.test.ts\\" 73)) (cons (set_delegate (variant \\"Some\\" (literal (key_hash tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"operation.test.ts\\" 73)) (\\"operation.test.ts\\" 73)) (\\"operation.test.ts\\" 73)) (operations (\\"operation.test.ts\\" 73)) (\\"operation.test.ts\\" 73)) (\\"operation.test.ts\\" 73)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 70))
        )
        "
`;

exports[`Delegation operation Build operation (Desugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CDR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"option\\",
                            \\"args\\": [
                                {
                                    \\"prim\\": \\"key_hash\\"
                                }
                            ]
                        },
                        {
                            \\"prim\\": \\"Some\\",
                            \\"args\\": [
                                {
                                    \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                                }
                            ]
                        }
                    ]
                },
                {
                    \\"prim\\": \\"SET_DELEGATE\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Delegation operation Build operation to clear the delegation (Sugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 94))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 96) ((set_type (params (\\"operation.test.ts\\" 96)) \\"unit\\" (\\"operation.test.ts\\" 98)) (set (operations (\\"operation.test.ts\\" 96)) (cons (set_delegate (variant \\"None\\" (unit) (\\"operation.test.ts\\" 96)) (\\"operation.test.ts\\" 96)) (operations (\\"operation.test.ts\\" 96)) (\\"operation.test.ts\\" 96)) (\\"operation.test.ts\\" 96)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 94))
        )
        "
`;

exports[`Delegation operation Build operation to clear the delegation (Sugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CDR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"NONE\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"key_hash\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"SET_DELEGATE\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Delegation operation Build operation to set delegator (Sugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 87))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 89) ((set_type (params (\\"operation.test.ts\\" 89)) \\"key_hash\\" (\\"operation.test.ts\\" 91)) (set (operations (\\"operation.test.ts\\" 89)) (cons (set_delegate (variant \\"Some\\" (params (\\"operation.test.ts\\" 89)) (\\"operation.test.ts\\" 89)) (\\"operation.test.ts\\" 89)) (operations (\\"operation.test.ts\\" 89)) (\\"operation.test.ts\\" 89)) (\\"operation.test.ts\\" 89)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 87))
        )
        "
`;

exports[`Delegation operation Build operation to set delegator (Sugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"key_hash\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"SOME\\"
                },
                {
                    \\"prim\\": \\"SET_DELEGATE\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Origination operation Build operation (Desugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 104))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 107) ((set_type (params (\\"operation.test.ts\\" 107)) \\"unit\\" (\\"operation.test.ts\\" 115)) (set (operations (\\"operation.test.ts\\" 107)) (cons (attr (create_contract (contract 
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 107))
            storage (unit)
            storage_type (())
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 107))
        )
        ) (storage (unit)) (baker (variant \\"None\\" (unit) (\\"operation.test.ts\\" 107))) (amount (literal (mutez 0) (\\"operation.test.ts\\" 107))) (\\"operation.test.ts\\" 107)) \\"operation\\" (\\"operation.test.ts\\" 107)) (operations (\\"operation.test.ts\\" 107)) (\\"operation.test.ts\\" 107)) (\\"operation.test.ts\\" 107)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 104))
        )
        "
`;

exports[`Origination operation Build operation (Desugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DUP\\"
                },
                {
                    \\"prim\\": \\"UNIT\\"
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"mutez\\"
                        },
                        {
                            \\"int\\": \\"0\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"NONE\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"key_hash\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"CREATE_CONTRACT\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"parameter\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"unit\\"
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"storage\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"unit\\"
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"code\\",
                                \\"args\\": [
                                    [
                                        {
                                            \\"prim\\": \\"CDR\\"
                                        },
                                        {
                                            \\"prim\\": \\"NIL\\",
                                            \\"args\\": [
                                                {
                                                    \\"prim\\": \\"operation\\"
                                                }
                                            ]
                                        },
                                        {
                                            \\"prim\\": \\"PAIR\\"
                                        }
                                    ]
                                ]
                            }
                        ]
                    ]
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"2\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"2\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Origination operation Build operation (Sugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 118))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 121) ((set_type (params (\\"operation.test.ts\\" 121)) \\"unit\\" (\\"operation.test.ts\\" 131)) (set (operations (\\"operation.test.ts\\" 121)) (cons (attr (create_contract (contract 
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 121))
            storage (unit)
            storage_type (())
            messages ()
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 121))
        )
        ) (storage (params (\\"operation.test.ts\\" 121))) (baker (variant \\"Some\\" (literal (key_hash tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"operation.test.ts\\" 121)) (\\"operation.test.ts\\" 121))) (amount (literal (mutez 100) (\\"operation.test.ts\\" 121))) (\\"operation.test.ts\\" 121)) \\"operation\\" (\\"operation.test.ts\\" 121)) (operations (\\"operation.test.ts\\" 121)) (\\"operation.test.ts\\" 121)) (\\"operation.test.ts\\" 121)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 118))
        )
        "
`;

exports[`Origination operation Build operation (Sugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DUP\\"
                },
                {
                    \\"prim\\": \\"DUP\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"3\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"mutez\\"
                        },
                        {
                            \\"int\\": \\"100\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"option\\",
                            \\"args\\": [
                                {
                                    \\"prim\\": \\"key_hash\\"
                                }
                            ]
                        },
                        {
                            \\"prim\\": \\"Some\\",
                            \\"args\\": [
                                {
                                    \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                                }
                            ]
                        }
                    ]
                },
                {
                    \\"prim\\": \\"CREATE_CONTRACT\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"parameter\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"unit\\"
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"storage\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"unit\\"
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"code\\",
                                \\"args\\": [
                                    [
                                        {
                                            \\"prim\\": \\"CDR\\"
                                        },
                                        {
                                            \\"prim\\": \\"NIL\\",
                                            \\"args\\": [
                                                {
                                                    \\"prim\\": \\"operation\\"
                                                }
                                            ]
                                        },
                                        {
                                            \\"prim\\": \\"PAIR\\"
                                        }
                                    ]
                                ]
                            }
                        ]
                    ]
                },
                {
                    \\"prim\\": \\"SWAP\\"
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"2\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"2\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DROP\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Transaction operation Build operation (Desugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 22))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 25) ((set_type (params (\\"operation.test.ts\\" 25)) \\"unit\\" (\\"operation.test.ts\\" 36)) (set (operations (\\"operation.test.ts\\" 25)) (cons (transfer (params (\\"operation.test.ts\\" 25)) (literal (mutez 100) (\\"operation.test.ts\\" 25)) (openVariant (contract default \\"unit\\" (literal (address tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"operation.test.ts\\" 25)) (\\"operation.test.ts\\" 25)) \\"Some\\" (variant \\"Some\\" (literal (string \\"CONTRACT_NOT_FOUND\\") (\\"operation.test.ts\\" 25)) (\\"operation.test.ts\\" 25)) (\\"operation.test.ts\\" 25)) (\\"operation.test.ts\\" 25)) (operations (\\"operation.test.ts\\" 25)) (\\"operation.test.ts\\" 25)) (\\"operation.test.ts\\" 25)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 22))
        )
        "
`;

exports[`Transaction operation Build operation (Desugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"address\\"
                        },
                        {
                            \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"CONTRACT\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"unit\\"
                        }
                    ],
                    \\"annots\\": [
                        \\"%default\\"
                    ]
                },
                {
                    \\"prim\\": \\"IF_NONE\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"PUSH\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"option\\",
                                        \\"args\\": [
                                            {
                                                \\"prim\\": \\"string\\"
                                            }
                                        ]
                                    },
                                    {
                                        \\"prim\\": \\"Some\\",
                                        \\"args\\": [
                                            {
                                                \\"string\\": \\"CONTRACT_NOT_FOUND\\"
                                            }
                                        ]
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"FAILWITH\\"
                            }
                        ],
                        []
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"mutez\\"
                        },
                        {
                            \\"int\\": \\"100\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"3\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"TRANSFER_TOKENS\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Transaction operation Build operation (Sugared version) 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 39))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 42) ((set_type (params (\\"operation.test.ts\\" 42)) \\"unit\\" (\\"operation.test.ts\\" 47)) (set (operations (\\"operation.test.ts\\" 42)) (cons (transfer (unit) (literal (mutez 100) (\\"operation.test.ts\\" 42)) (openVariant (contract default \\"unit\\" (literal (address tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN) (\\"operation.test.ts\\" 42)) (\\"operation.test.ts\\" 42)) \\"Some\\" (variant \\"Some\\" (literal (string \\"CONTRACT_NOT_FOUND\\") (\\"operation.test.ts\\" 42)) (\\"operation.test.ts\\" 42)) (\\"operation.test.ts\\" 42)) (\\"operation.test.ts\\" 42)) (operations (\\"operation.test.ts\\" 42)) (\\"operation.test.ts\\" 42)) (\\"operation.test.ts\\" 42)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 39))
        )
        "
`;

exports[`Transaction operation Build operation (Sugared version) 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"CDR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"address\\"
                        },
                        {
                            \\"string\\": \\"tz1gTnKMA65qaKVpp6x4cgMLU2UyKF2zjHYN\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"CONTRACT\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"unit\\"
                        }
                    ],
                    \\"annots\\": [
                        \\"%default\\"
                    ]
                },
                {
                    \\"prim\\": \\"IF_NONE\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"PUSH\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"option\\",
                                        \\"args\\": [
                                            {
                                                \\"prim\\": \\"string\\"
                                            }
                                        ]
                                    },
                                    {
                                        \\"prim\\": \\"Some\\",
                                        \\"args\\": [
                                            {
                                                \\"string\\": \\"CONTRACT_NOT_FOUND\\"
                                            }
                                        ]
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"FAILWITH\\"
                            }
                        ],
                        []
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"mutez\\"
                        },
                        {
                            \\"int\\": \\"100\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"UNIT\\"
                },
                {
                    \\"prim\\": \\"TRANSFER_TOKENS\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;

exports[`Transaction operation Build operation to an originated contract 1`] = `
"
        (
            template_id (static_id 0 (\\"operation.test.ts\\" 50))
            storage (unit)
            storage_type (())
            messages ((ep1 True False False True (\\"operation.test.ts\\" 53) ((set_type (params (\\"operation.test.ts\\" 53)) \\"nat\\" (\\"operation.test.ts\\" 64)) (set (operations (\\"operation.test.ts\\" 55)) (cons (transfer (params (\\"operation.test.ts\\" 53)) (literal (mutez 100) (\\"operation.test.ts\\" 55)) (openVariant (contract ep1 \\"nat\\" (literal (address KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT) (\\"operation.test.ts\\" 55)) (\\"operation.test.ts\\" 55)) \\"Some\\" (variant \\"Some\\" (literal (string \\"CONTRACT_NOT_FOUND\\") (\\"operation.test.ts\\" 55)) (\\"operation.test.ts\\" 55)) (\\"operation.test.ts\\" 55)) (\\"operation.test.ts\\" 55)) (operations (\\"operation.test.ts\\" 55)) (\\"operation.test.ts\\" 55)) (\\"operation.test.ts\\" 55)))))
            flags ()
            privates ()
            views ()
            entry_points_layout ()
            initial_metadata ()
            balance (literal (mutez 0) (\\"operation.test.ts\\" 50))
        )
        "
`;

exports[`Transaction operation Build operation to an originated contract 2`] = `
"[
    {
        \\"prim\\": \\"storage\\",
        \\"args\\": [
            {
                \\"prim\\": \\"unit\\"
            }
        ]
    },
    {
        \\"prim\\": \\"parameter\\",
        \\"args\\": [
            {
                \\"prim\\": \\"nat\\",
                \\"annots\\": [
                    \\"%ep1\\"
                ]
            }
        ]
    },
    {
        \\"prim\\": \\"code\\",
        \\"args\\": [
            [
                {
                    \\"prim\\": \\"UNPAIR\\"
                },
                {
                    \\"prim\\": \\"NIL\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"operation\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"address\\"
                        },
                        {
                            \\"string\\": \\"KT1R9M3MDffw7qSVSnbJs46aMC9YzzZz3aGT\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"CONTRACT\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"nat\\"
                        }
                    ],
                    \\"annots\\": [
                        \\"%ep1\\"
                    ]
                },
                {
                    \\"prim\\": \\"IF_NONE\\",
                    \\"args\\": [
                        [
                            {
                                \\"prim\\": \\"PUSH\\",
                                \\"args\\": [
                                    {
                                        \\"prim\\": \\"option\\",
                                        \\"args\\": [
                                            {
                                                \\"prim\\": \\"string\\"
                                            }
                                        ]
                                    },
                                    {
                                        \\"prim\\": \\"Some\\",
                                        \\"args\\": [
                                            {
                                                \\"string\\": \\"CONTRACT_NOT_FOUND\\"
                                            }
                                        ]
                                    }
                                ]
                            },
                            {
                                \\"prim\\": \\"FAILWITH\\"
                            }
                        ],
                        []
                    ]
                },
                {
                    \\"prim\\": \\"PUSH\\",
                    \\"args\\": [
                        {
                            \\"prim\\": \\"mutez\\"
                        },
                        {
                            \\"int\\": \\"100\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"DIG\\",
                    \\"args\\": [
                        {
                            \\"int\\": \\"3\\"
                        }
                    ]
                },
                {
                    \\"prim\\": \\"TRANSFER_TOKENS\\"
                },
                {
                    \\"prim\\": \\"CONS\\"
                },
                {
                    \\"prim\\": \\"PAIR\\"
                }
            ]
        ]
    }
]"
`;
